# toyc

./: 17and20.txt  dune-project
Toyc/lib/: IrToAsm.ml  astToIR.ml  cfg.ml  dune  ir.ml  lexer.mll  liveness.ml  optimizer.ml  print_ast.ml  print_ir.ml  regAlloc.ml  regalloc.ml
Toyc/test/: dune  test_Toyc.ml
lib/: IrToAsm.ml  RegAlloc.ml  ast.ml  astToIR.ml  cfg.ml  cse.ml  dune  ir.ml  lexer.mll  linearScan.ml  liveness.ml  loop.ml  op.ml  parser.mly  print_ast.ml  print_ir.ml  reg.ml  reg_alloc.ml  regalloc.ml
test/: 17and20.txt
