(library
 (name compilerlib)
 (modules lexer parser ast ir print_ast print_ir astToIR cfg loop IrToAsm)) 
(rule
 (targets parser.ml parser.mli parser.output)
 (deps parser.mly)
 (action
  (chdir
   %{workspace_root}
   ;; 提供 .output 文件在 ./_build/default/lib/parser.output
   (run ocamlyacc -v lib/parser.mly))))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (chdir
   %{workspace_root}
   (run ocamllex -o lib/lexer.ml lib/lexer.mll))))