(library
 (name compilerlib)
 ;; 在库中添加 liveness 和 regAlloc 模块
 (modules ast astToIR cfg ir liveness regAlloc print_ast print_ir IrToAsm))

(rule
 (targets parser.ml parser.mli parser.output)
 (deps parser.mly)
 (action
  (chdir
   %{workspace_root}
   ;; 提供 .output 文件在 ./_build/default/lib/parser.output
   (run ocamlyacc -v lib/parser.mly))))

(rule
 (targets lexer.ml)
 (deps lexer.mll)
 (action
  (chdir
   %{workspace_root}
   (run ocamllex -o lib/lexer.ml lib/lexer.mll))))